Добавил swagger описание для написанных методов. Добавил методы для получения всех пользователей и всех офисов.добавил описание моделей.
